--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   profiles:
-    active: dev, aliOss, redis
+    active: dev, aliOss, redis, wx
   main:
     allow-circular-references: true
   datasource:
@@ -43,6 +43,12 @@ sky:
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+    # 设置用户端令牌名称
+    user-token-name: authentication
+    # 设置用户端的密钥(name)
+    user-secret-key: itheima
+    # 设置用户端的过期时间
+    user-ttl: 7200000
 
   #阿里云Oss配置
   alioss:
@@ -51,3 +57,7 @@ sky:
     access-key-secret: ${sky.alioss.access-key-secret}
     bucket-name: ${sky.alioss.bucket-name}
 
+  # 配置微信小程序的appid和secret
+  wechat:
+    appid: ${sky.wechat.appid}
+    secret: ${sky.wechat.secret}
